--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,15 +15,21 @@
     "@hookform/resolvers": "^4.1.3",
     "@mui/icons-material": "^6.4.6",
     "@mui/material": "^6.4.6",
+    "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.1",
+    "lodash": "^4.17.21",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.2",
+    "react-redux": "^9.2.0",
     "react-router": "^7.2.0",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/lodash": "^4.17.16",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
