--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^6.4.6",
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.1",
+    "dayjs": "^1.11.13",
     "lodash": "^4.17.21",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -24,6 +25,7 @@
     "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
     "react-router": "^7.2.0",
+    "react-to-print": "^3.0.5",
     "yup": "^1.6.1",
     "zod": "^3.24.2"
   },
